# droidports

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.gdb
bridges/: ctype_bridge.c  ctype_bridge.h  freetype_bridge.c  freetype_bridge.h  gles2_bridge.c  gles2_bridge.h  math_bridge.c  math_bridge.h  misc_bridges.c  misc_bridges.h  openal_bridge.c  openal_bridge.h  pthread_bridge.c  pthread_bridge.h  stdio_bridge.c  stdio_bridge.h  symtables.h  vorbis_bridge.c  vorbis_bridge.h  zip_bridge.c  zip_bridge.h
cmake/: FindLibZip.cmake  FindVorbis.cmake
jni/: JString.c  fake_jni.c  fake_jni.h  fake_jni_priv.h  os_Build.c  os_Build.h  prelude_helpers.h  prologue_helpers.h  prologue_helpers_a.h  prologue_helpers_v.h
platform/common/: asm_encodings.h  crc32.c  crc32.h  gles2.h  gles2_loader.c  gles2_macros.h  gles2_platform.h  io_util.c  io_util.h  platform.h  so_util.c  so_util.h  zip_util.c  zip_util.h
platform/linux/: physram.c  so_util_linux.c
platform/vita/: newlib.c  pthread.c  so_util_vita.c  stdio.c
ports/gmloader/: RunnerJNILib.c  RunnerJNILib.h  achievements.c  gamepad_impl.c  libyoyo.c  libyoyo.h  libyoyo_internals.h  main.c  media.h  mouse_impl.c  port.cmake  sdl2_media.c  splash.c  splash.h  texture.c
ports/gmloader/sce_sys/livearea/contents/: template.xml
